Deleting copied files

--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
   "name": "resume-review",
-  "version": "0.0.0",
+  "version": "2.0.0-alpha",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "ng": "ng",
+    "build": "ng build --prod",
+    "start": "node dist/server/app.js",
+    "predev": "tsc -p server",
+    "dev": "concurrently \"ng serve --proxy-config proxy.conf.json --open\" \"tsc -w -p server\" \"nodemon dist/server/app.js\"",
+    "prod": "concurrently \"ng build --aot --prod && tsc -p server && node dist/server/app.js\"",
+    "test": "ng test",
+    "testbe": "tsc -p server && mocha dist/server/test --exit",
+    "lint": "ng lint",
+    "linthtml": "htmlhint \"client/**/*.html\"",
+    "lintscss": "sass-lint \"client/**/*.scss\" -v",
+    "lintbe": "tslint server/**/**.ts{,x}",
+    "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26",
     "aws-sdk": "^2.325.0",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
@@ -30,6 +54,28 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.3.4",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "concurrently": "^4.1.0",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2",
+    "sass-lint": "^1.12.1",
+    "htmlhint": "^0.10.1",
     "nodemon": "^1.18.9"
   }
 }
